# githooks

./: .pre-commit-hooks.yaml  LICENSE  README.md  example-eslint-config.json  install.js  package.json  setup.cfg  setup.py
hooks/: eslint  index.js
pre-commit-hooks/: pre-commit.js
pre_commit_hooks/: __init__.py  check-customapi-privilege.py  check_added_large_files1.py  check_customapi_privilege.py  util.py
