[metadata]
name = pre-commit-hooks-custom
version = 1.0.1
description = ESLint pre-commit hooks for TypeScript/JavaScript projects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tanvikreddy/githooks
author = tanvikreddy
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Software Development :: Quality Assurance

[options]
packages = find:
# No Python package dependencies for ESLint hooks
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    check-added-large-files1 = pre_commit_hooks.check_added_large_files1:main
    # Note: The eslint hook uses PowerShell script, not Python entry point

[bdist_wheel]
universal = True